# tea-party-reservation-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: cd-prod.yml  cd-stage.yml  ci.yml
deploy/compose/: compose.local.yml  compose.prod.yml  compose.stage.yml  compose.yml
deploy/compose/env/: local.env.example  postgres.env.example  prod.env.example  prod.secrets.env.example  stage.env.example  stage.secrets.env.example
docker/: entrypoint.sh
docs/: deployment.md  specification-v1.0.md
infra/ansible/: ansible.cfg
infra/ansible/group_vars/: all.yml
infra/ansible/inventory/: hosts.example.ini
infra/ansible/playbooks/: site.yml
infra/terraform/: README.md  main.tf  outputs.tf  prod.tfvars.example  server.tfvars.example  stage.tfvars.example  variables.tf  versions.tf
infra/terraform/templates/: cloud-init.yaml.tftpl
ops/runbooks/: deploy.md  incident-response.md  restore.md  rollback.md
src/tea_party_reservation_bot/: __main__.py  app.py  exceptions.py  logging.py  metrics.py  result.py  time.py
src/tea_party_reservation_bot/application/: __init__.py  contracts.py  dto.py  security.py  services.py  telegram.py
src/tea_party_reservation_bot/background/: __init__.py  contracts.py  processor.py  runtime.py
src/tea_party_reservation_bot/config/: __init__.py  settings.py
src/tea_party_reservation_bot/domain/: __init__.py  enums.py  events.py  parsing.py  rbac.py
src/tea_party_reservation_bot/infrastructure/: __init__.py
src/tea_party_reservation_bot/infrastructure/db/: __init__.py  base.py  models.py  repositories.py  session.py  uow.py
src/tea_party_reservation_bot/infrastructure/telegram/: __init__.py  backends.py  (+2 more)
src/tea_party_reservation_bot/presentation/: __init__.py
tests/integration/: conftest.py  test_app_metrics.py  test_persistence_flows.py  test_runtime_glue.py
tests/unit/: test_admin_event_parser.py  test_background_runtime.py  test_domain_event_rules.py  test_event_status_transitions.py  test_metrics_http.py  test_rbac.py  test_telegram_backends.py  test_telegram_deep_links.py  test_telegram_private_chat_filters.py  test_telegram_publication.py  test_telegram_rendering.py
(+19 files in other folders)
