[project]
name = "tea-party-reservation-bot"
version = "0.1.0"
description = "Telegram bot for tea tasting reservations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.20.0,<4.0.0",
    "alembic>=1.16.0,<2.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "structlog>=25.4.0,<26.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0,<2.0.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "ruff>=0.12.0,<1.0.0",
    "testcontainers[postgres]>=4.8.0,<5.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tea_party_reservation_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "B",
    "UP",
    "S",
    "A",
    "C4",
    "DTZ",
    "ICN",
    "PIE",
    "PL",
    "PTH",
    "RUF",
]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"src/tea_party_reservation_bot/application/services.py" = ["RUF001"]
"src/tea_party_reservation_bot/presentation/telegram/keyboards.py" = ["RUF001"]
"src/tea_party_reservation_bot/presentation/telegram/renderers.py" = ["RUF001"]
"tests/**/*.py" = ["PLR2004"]
"src/tea_party_reservation_bot/domain/parsing.py" = ["DTZ007", "PLR0912", "RUF001"]
"tests/unit/test_admin_event_parser.py" = ["RUF001"]
"tests/unit/test_telegram_publication.py" = ["RUF001"]
"tests/unit/test_telegram_rendering.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
mypy_path = ["src"]
packages = ["tea_party_reservation_bot"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.alembic]
script_location = "src/tea_party_reservation_bot/infrastructure/db/migrations"
